# diffPack

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: git.rs  mod.rs  pack.rs  ssh.rs
src-tauri/src/git/: commit.rs  diff.rs  mod.rs  repository.rs
src-tauri/src/models/: git_models.rs  mod.rs  pack_models.rs  ssh_models.rs
src-tauri/src/pack/: mod.rs  tar.rs  zip.rs
src-tauri/src/ssh/: auth.rs  client.rs  config.rs  mod.rs  session.rs  sftp.rs
src-tauri/src/utils/: string.rs
src/assets/styles/: design-system.css  main.css
src/components/common/: AppDialog.vue  AppHeader.vue  AppNotification.vue  CommitList.vue  FileList.vue  LoadingOverlay.vue  SearchInput.vue
src/components/pack/: PackOptions.vue  PackProgress.vue  PackResult.vue
src/components/ssh/: SshConfigForm.vue  SshConnectionStatus.vue
src/composables/: index.ts  useLoading.ts  useNotifier.ts  useRepository.ts  useSelection.ts
src/router/: index.ts
src/services/: gitService.ts  packService.ts  sshService.ts
src/stores/: appStore.ts  gitStore.ts  index.ts  notificationStore.ts  packStore.ts  sshStore.ts
src/types/: git.ts  index.ts  pack.ts  ssh.ts
src/views/: Home.vue  LocalAnalysis.vue  RemoteAnalysis.vue  Settings.vue
