[package]
name = "diff-pack"
version = "0.1.0"
description = "Git 差异项目版本打包器"
authors = ["you"]
edition = "2021"

[lib]
name = "diff_pack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
git2 = "0.19"
ssh2 = "0.9"
zip = "2"
tar = "0.4"
flate2 = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
dirs = "6"
walkdir = "2"
lazy_static = "1"
